--- a/Dishiishe.mw
+++ b/Dishiishe.mw
@@ -22,87 +22,19 @@
 [[File:Somalia_tribes1977.jpg|thumb|right|250px|Map Muujinaya qayb ahaan sida ay u kala degaan qabaa'ilka Soomaalida.<ref>{{cite web|url=http://www.lib.utexas.edu/maps/somalia.html|title=Somalia Maps - Perry–Castañeda Map Collection - UT Library Online|author=|date=|website=www.lib.utexas.edu|accessdate=6 April 2018}}</ref>]]
 
 ==Daarood==
-Daarood waa [[beel]] ka mid ah beelaha [[Soomaali]]da kuwaasi oo degan [[Geeska Afrika]]. Beesha Daarood waxaay degtaa wadanka [[Soomaaliya]] (gobolada dhexe iyo [[Gedo]]), wadanka [[Itoobiya]] iyo deegaano ka tirsan wadanka [[Kiinya]].
-Guud ahaan, beesha Daarood waxaa ka farcama reero badan oo ka mid yihiin: [[Absame]], [[Ogaadeen (beel)|Ogaadeen]], [[Harti]] ([[Dhulbahante]], [[Dishiishe]], [[Majeerteen]] iyo [[Warsangali]]), [[Lailkase]], [[Mareexaan]] iyo beelo kale.
+Daarood waa [[beel]] ka mid ah beelaha [[Soomaali]]da kuwaasi oo degan [[Geeska Afrika]]. Beesha Daarood waxaay degtaa wadanka [[Soomaaliya]] (gobolada dhexe ), wadanka [[Itoobiya]] iyo deegaano ka tirsan wadanka [[Kiinya]].
+Guud ahaan, beesha Daarood waxaa ka farcama reero badan oo ka mid yihiin: [[Mareexaan]], [[Ogaadeen (beel)|Ogaadeen]], [[Harti]] ([[Reer Darawiish]], [[Dishiishe]], [[Majeerteen]] iyo [[Warsangali]]), [[Lailkase]] iyo beelo kale.
 
 Lahjadaha ay ku hadlaan daaroodku waa ay kala duwan yihiin oo iskuma dhowa, tusaale ahaan meesha ay kuwa dega Itoobiya lahjad gooni ah uga hadlaan kuwa dhinaca bari degana lahjad gaara ayay ku hadlaan, kuwa sanaag segana lahjad gaara ayaabay ku hadlaan.
 Asal ahaan odaygii Daarood ahaa waxa uu ku yimid Yaman Jabarti Ismaaciil isaga oo sheekh ah oo faafinaya diinta Islaamka gaar ahaana waxa uu ka soo degay meel u dhaw degmada Laasqoray ee gobolka Sanaag waxaa uu mudo diinta Islaamka ka faafinayey dhulka Bariga iyo Bartamaha Geeska Afrika. Daarood waxaa dhashay Doombiro Dir.
-{{Navbox
-| name      = Beelaha Soomaalida
-| title     = [[Soomaali#Beelaha|Beelaha Soomaalida]]
-| state = {{{state|autocollapse}}}
-| listclass = hlist 
 
-| group1 = [[Daarood]]
-| list1 =
-*[[Absame]]
-**[[Ogaadeen (beel)|Ogaadeen]]
-*[[Harti]]
-**[[Dhulbahante]]
-**[[Dishiishe]]
-**[[Majeerteen]]
-**[[Warsangali]]
-*[[Lailkase]]
-*[[Mareexaan]]
-**[[Cawlyahan]]
-
-| group2 = [[Dir]]
-| list2 =
-*[[Gadabuursi]]
-**[[Habar Cafaan]]
-**[[Makaahiil]]
-**[[Beesha Maxamed Case|Maxamed Case]]
-*[[Ciise (beel)|Ciise]]
-*[[Isaaq]]
-**[[Isaaq|Arab]]
-**[[Habar Awal]]
-**[[Habar Jeclo]]
-**[[Isaaq|Garxajis]]
-***Habr Yunis
-***Ciidangalle
-*[[Surre (beel)|Surre]]
-**[[Surre (beel)|Cabdalla & Qubeys]]
-*[[Biimaal]]
-**[[Biimaal|Gaadsen]]
-*[[Garre]]
-**[[Garre|Quranyow]]
-*[[Gurgura]]
-*[[Dir (beel)|Gurre]]
-*[[Dir (beel)|Garire]]
-*[[Bursuuk]]
-*[[Dir (beel)|Bajimal]]
-
-| group3 = [[Hawiye]]
-| list3 =
-*[[Abgaal]]
-*[[Habar Gidir]]
-**[[Cayr (beel)|Cayr]]
-*[[Hiraab]]
-*[[Silcis]]
-*[[Xawaadle]]
-*[[Gaaljecel]]
-*[[Degoodi]]
-*[[Sheekhaal]]
-
-| group4 = [[Raxanweyn]]
-| list4 =
-*[[Raxanweyn|Digil]]
-*[[Raxanweyn|Mirifle]]
-
-| group5 = [[Samaale|Beelaha kale]]
-| list5 =
-*[[Garre]]
-*[[Samaale|Ajuraan]]
-
-| group6 = Laga tiro badan yahay
-| list6 =
-*[[Madhibaan]]
-*[[Muuse (beel)|Muuse]]
-*[[Reerow Xasan]]
-*[[Yibir]]
-}}<noinclude>
-{{doc|content=
-{{collapsible option}}
-
+==Sidoo kale fiiri==
+*[[Soomaali|Beelaha Soomaalida]]
+==Tixraac==
+{{reflist}}
+{{Beelaha Soomaalida}}
+{{Commons|Category:Darod}}
+[[Category:Qabiilada Soomaalida]]
+[[Category:Soomaali]]
+[[Category:Dadka Soomaaliga]]
 [[Category:Macluumaadka Soomaaliya]]
-}}
