--- a/Hodan.mw
+++ b/Hodan.mw
@@ -80,6 +80,9 @@ hotel jabuuti
 * isbitaalka Xisbiga
 * isbitaalka ahmed fanax
 *isbitalka rajab
+*Isbitaalka Kalkaal
+*Isbitalka cusmaan fiqi
+*Isbitaalka Deva
 
 ==== wasaaradaha ====
 * kuliyada jaale siyaad 
