Maxamed Kheyre Rooble dhagaxtuur

--- a/Dhagaxtuur.mw
+++ b/Dhagaxtuur.mw
@@ -19,7 +19,7 @@ Dagaalkii dhagaxtuur waxoo dhacay markii gumeestihii Talyaaniga oo codsanaayay i
 
 Mudaaharaadyo balaaran ayaa ka dhacay caasimada muqdisho oo looga soo horjeeday gumeestihii talyaaniga, mudaaharaadyadaas waxaa soo dhaxgalay booliiskii gumeestihii Ingiriiska oo digniin u jeediyay dadkii banaanbaxaayay, isla markaas neh waxaa dhacday in dadkii mudaaharaadaayay ee dhagaxyo ku tuuraan askartii ingiriiska,
 
-Waxeena shacabka ugu jawaabeen rasaas oo qiyaas ahaan 50 qof ku dhaawac matay, waxaana ku geeriyooday Maxamed cali huud Dhagaxtuur oo horkacayay Dadkii la dagaalamayay Gumaytaha kana mid ahaa abaabulayashi Banaanbaxii dhagaxtuur, taas ayaana keentay in isaga loogu magacdaro halgaankaas qiimaha lahaa maadaama isagu uu ahaa qofkii kale ee halgankaas ku shahiiday. 
+Waxeena shacabka ugu jawaabeen rasaas oo qiyaas ahaan 50 qof ku dhaawac matay, waxaana ku geeriyooday Maxamed Kheyre Rooble Dhagaxtuur oo horkacayay Dadkii la dagaalamayay Gumaytaha kana mid ahaa abaabulayashi Banaanbaxii dhagaxtuur, taas ayaana keentay in isaga loogu magacdaro halgaankaas qiimaha lahaa maadaama isagu uu ahaa qofkii kale ee halgankaas ku shahiiday. 
 
 Dhanka kake waxa askartii ingiriiska uga dhimatay 5 askari.<ref>Zak Yusuf</ref>
 [[Category:Taariikhda Soomaaliya]]
