*Empty MediaWiki Message*

--- a/Iidoor.mw
+++ b/Iidoor.mw
@@ -1,4 +1,4 @@
  .
 wa eray micnihiisu yhy badalasho 
-taaso loogu magac darey qabiilka isaaq ,sababtuna tahey waxay ganacsi la sameyn jireen masaaridi hore,iyo gancsatadi middle east
+taaso loogu magac darey qabiilka isaaq (Nuux Ismaaciil) ,sababtuna tahey waxay ganacsi la sameyn jireen masaaridi hore,iyo gancsatadi middle east
 [[Category:Qabiilada Soomaalida]]
