Bog loo bedeley [[Template:Caddayn u baahan]]

--- a/Template:References.mw
+++ b/Template:References.mw
@@ -1,1 +1,1 @@
-<div class="reflist {{#if:{{{1|}}}|reflist-cols reflist-cols{{{1|2}}}}}">{{#tag:references|{{{refs|{{{Xigasho|}}}}}}|group={{{group|{{{dhamaan|}}}}}}}}</div><noinclude>{{Documentation}}</noinclude>
+#redirect [[Template:Caddayn u baahan]]
