--- a/Dishiishe.mw
+++ b/Dishiishe.mw
@@ -1,15 +1,15 @@
 {{Infobox ethnic group|
 |group = Dishiishe <br> دشيشي
 |image =
-|region1 = {{flagcountry|Somalia}}
+|region1 = {{flagcountry|Somalia}}{{flagcountry|Djibouti}}
 |region2 = {{flagcountry|Oman}}
- |region4 = {{flagcountry|Yemen}}
+ |region4 = {{flagcountry|Yemen}},{{flagcountry|Ethiopia}}
 |region5 = {{flagcountry|Great Britain}}
 |region6 = {{flagcountry|United States}}
 |langs = [[Af-Soomaali]]
 |rels = [[Islam| Islam Sunni]]
-|related-c = [[Gabtaanle]], [[Meheri]],  [[Majeerteen]], [[Dhulbahante]], [[Warsangali]], [[Jidwaaq]], [[Tiinle]], [[Ogaadeen]], [[Mareexaan]], [[Yemen|Yemeni]] iyo beelo kale oo [[Daarood]] Iyo [[Soomaali]]
-}}
+|related-c = [[Gabtaanle]], [[Meheri]],  [[Majeerten, Akishe]], [[Dhulbahante]], [[Warsangali]], [[Jidwaaq]], [[Tiinle]], [[Ogaadeen]], ,[[Mareexaan]], [[Yemen|Yemeni]] iyo beelo kale oo [[Daarood]] Iyo [[Soomaali]]
+}}{{Regions of Somalia Image Map}}
 '''Dishiishe''' ({{lang-en|''Dishiishe''}}) ({{lang-ar| '' دشيشي ''}}), ''Mohammud [[Axmed Harti|Ahmed Harti]] Amaleh Abdi Muhammad Abdirahman Jaberti''; sidoo kale loo qoro '''Dashiishe''', '''Dishishe''', '''Dashishle''' Waa [[Beelaha Soomaalida|qabiil]] ka tirsan beelaha [[Daarood]]ka, ee [[Soomaali|Dadka Soomaalida]]. Dishiishuhu waxay deegaan ku yihiin wadanka [[Soomaaliya]] (gaar ahaan gobolada [[Gobolka Bari| Bari]] iyo [[Sanaag]]), deegaano ka mid ah [[Cumaan]] gaar ahaan gobolka ''Dufaar'' oo ay degaan Beesha [[Muhdi]] oo ka mida beelaha Dishiishaha, magaalada [[Kismaayo]] iyo deegaano kale oo ka tirsan  Soomaaliya.  Dishiishuhu wuxuu ka mid yahay beelaha [[Mooracase]] ee hoostaga [[Daarood]]ka. Waana Beel aad loogu qadariyo Magaalada [[Boosaaso]] iyo Hareeraheeda oo ah Degaanka ay Taariikh ahaan Degaan. <ref>{{cite web |url=http://www.lib.utexas.edu/maps/africa/somalia_ethnic_grps_2002.jpg |title=Ethnic Groups |author=[[Central Intelligence Agency]] |year=2002 |work=Somalia Summary Map |publisher=[[Perry–Castañeda Library]] |accessdate=18 May 2010}}</ref>
 
 [[Category:Qabiilada Soomaalida]]
