*Empty MediaWiki Message*

--- a/Dhagaxtuur.mw
+++ b/Dhagaxtuur.mw
@@ -5,7 +5,7 @@ Magaca: Maxamed Kheyre Rooble <nowiki>{{Dhagaxtuur}}</nowiki> (1913 - 1949)
 
 Jinsiyadda : Soomaali
 
-Qabiilka: Hawiye, Murusade, Hilibi maxamed, Cumar isxijiwaaq.
+Qabiilka: Hawiye, Murusade, Hilibi maxamed.
 
 Ku dhashay: Hobyo 1915.
 
