/* Hormuudka Beesha Hilibi murusade */

--- a/Hilibi_Maxamed.mw
+++ b/Hilibi_Maxamed.mw
@@ -57,7 +57,7 @@ Yaraanka Hilibi
 
 
 
-*2 Suldaanka guud ee Beesha murusade Xasan Axmed Sabriye (Xasan Madow)
+*2 Suldaanka guud ee Beesha murusade Cumar Haji Xassan gardheer Mahadlle
 
 
 
