--- a/Berbera.mw
+++ b/Berbera.mw
@@ -11,7 +11,7 @@
   | photo3a = Bank in Berbera.jpg
   | photo3b = Berbera Municipality.jpg
   | photo4a = Berbera Port2.jpg
-  | photo4b = Berbera Port Road.jpg
+  | photo4b =
   | spacing = 2
   | border = 0
   | size = 266
