Removing [[:c:File:Berbera_Municipality.jpg|Berbera_Municipality.jpg]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Kangdomkome|]].

--- a/Berbera.mw
+++ b/Berbera.mw
@@ -9,7 +9,7 @@
   | photo1b = 
   | photo2a = Berbera engraving.jpg
   | photo3a = Bank in Berbera.jpg
-  | photo3b = Berbera Municipality.jpg
+  | photo3b =
   | photo4a = Berbera Port2.jpg
   | photo4b =
   | spacing = 2
