/* Hormuudka Beesha Hilibi murusade */

--- a/Hilibi_Maxamed.mw
+++ b/Hilibi_Maxamed.mw
@@ -85,11 +85,11 @@ Yaraanka Hilibi
 
 
 
-*9 Xildhibaan Cumar Maxamud Mahadale Galmudug
+*9 Xildhibaan Abdullahi Ali Xabad Galmudug
 
 
 
-* 10 Xildhibaan Aadan Xaaji Xasan Gardheer Galmudug
+* Abdirisaq Wasiir Galmudug 
 
 
 *11 Colonel Maxamed Xaaji Liire
