--- a/Freestyle_Script.mw
+++ b/Freestyle_Script.mw
@@ -1,6 +1,6 @@
 [[file:FreestyleScriptSp.png|300px|thumb|Freestyle Script]]
 
-'''Freestyle Script''' waa [[font]] waxaas [[Martin Wait]] waxaa loogu talagalay gudaha 1981. ''Bold'' werin ee Freestyle Script ahaa loogu talagalay 1986. [[Adobe Systems|Adobe]], [[International Typface Corporation|ITC]] iyo [[Letraset]] waa daabacayaasha ee Freestyle Script. Waxay leedahay 4 noocyada: Regular, Bold, SH Reg Alt, iyo SB Reg Alt.<ref>{{cite web|title=Freestyle Script Font Family|url=https://www.fonts.com/font/adobe/freestyle-script|website=Fonts.com|accessdate=3 May 2018}}</ref>
+'''Freestyle Script''' waa [[font]] waxaas [[Martin Wait]] waxaa loogu talagalay gudaha 1981. ''Bold'' werin ee Freestyle Script ahaa loogu talagalay 1986. [[Adobe Systems|Adobe]], [[International Typeface Corporation|ITC]] iyo [[Letraset]] waa daabacayaasha ee Freestyle Script. Waxay leedahay 4 noocyada: Regular, Bold, SH Reg Alt, iyo SB Reg Alt.<ref>{{cite web|title=Freestyle Script Font Family|url=https://www.fonts.com/font/adobe/freestyle-script|website=Fonts.com|accessdate=3 May 2018}}</ref>
 
 = Xigasho =
 {{Reflist}}
