Removing [[:c:File:Bank_in_Berbera.jpg|Bank_in_Berbera.jpg]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Kangdomkome|]].

--- a/Berbera.mw
+++ b/Berbera.mw
@@ -8,7 +8,7 @@
   | photo1a = Berbera building.jpg
   | photo1b = 
   | photo2a = Berbera engraving.jpg
-  | photo3a = Bank in Berbera.jpg
+  | photo3a =
   | photo3b =
   | photo4a = Berbera Port2.jpg
   | photo4b =
