Removing [[:c:File:Berbera_engraving.jpg|Berbera_engraving.jpg]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Kangdomkome|]].

--- a/Berbera.mw
+++ b/Berbera.mw
@@ -7,7 +7,7 @@
   |color=#ffffff
   | photo1a = Berbera building.jpg
   | photo1b = 
-  | photo2a = Berbera engraving.jpg
+  | photo2a =
   | photo3a =
   | photo3b =
   | photo4a = Berbera Port2.jpg
