/* Annual contest Wikipedia Pages Wanting Photos */ new section

--- a/Wikipedia:Safaarad.mw
+++ b/Wikipedia:Safaarad.mw
@@ -1185,3 +1185,21 @@ This issue of the [[mw:Special:MyLanguage/Editing|Editing]] newsletter includes 
 – [[User:Whatamidoing (WMF)|Whatamidoing (WMF)]] ([[User talk:Whatamidoing (WMF)|talk]])
 </div> 20:33, 17 Juun 2020 (UTC)
 <!-- Message sent by User:Trizek (WMF)@metawiki using the list at https://meta.wikimedia.org/w/index.php?title=User:Trizek_(WMF)/sandbox/temp_MassMessage_list&oldid=20184653 -->
+
+== Annual contest Wikipedia Pages Wanting Photos ==
+
+[[File:WPWP logo 1.png|150px|right|Wikipedia Pages Wanting Photos (WPWP)]]
+This is to invite you to join the Wikipedia Pages Wanting Photos (WPWP) campaign to help improve Wikipedia articles with photos and win prizes. The campaign starts today 1st July 2020 and closes 31st August 2020.
+
+The campaign primarily aims at using images from Wikimedia Commons on Wikipedia articles that are lacking images. Participants will choose among Wikipedia pages without photo images, then add a suitable file from among the many thousands of photos in the Wikimedia Commons, especially those uploaded from thematic contests (Wiki Loves Africa, Wiki Loves Earth, Wiki Loves Folklore, etc.) over the years.
+
+Please visit the '''[[m:Wikipedia Pages Wanting Photos|campaign page]]''' to learn more about the WPWP Campaign.
+
+With kind regards,
+
+Thank you,
+
+Deborah Schwartz Jacobs, Communities Liaison, On behalf of the Wikipedia Pages Wanting Photos Organizing Team - 08:24, 1 Luuliyo 2020 (UTC)
+
+''feel free to translate this message to your local language when this helps your community''
+<!-- Message sent by User:Romaine@metawiki using the list at https://meta.wikimedia.org/w/index.php?title=User:Romaine/MassMessage&oldid=20232618 -->
