--- a/Afurur.mw
+++ b/Afurur.mw
@@ -1,3 +1,4 @@
+ #REDIRECT [[Af Urur]]
 '''Afurur''' Waa deegaan aad u balaaran oo leh waxsoosaaro kala duwan, Tuulada Afurur waxaa ku nool dad aan tiro ahaan yaran, Waxaa ku yaala Saldhig weyn oo ciidamada Difaaca [[Puntland]] Leeyihiin. Waana goob Muhiim u ah difaaca guud ahaan woqooyi bari & Woqooyi galbeed ee [[Soomaaliya]].
 
 ==Nolosha Deegaanka==
