*Empty MediaWiki Message*

--- a/Af_Urur.mw
+++ b/Af_Urur.mw
@@ -1,5 +1,5 @@
 
-'''Afurur''' Waa deegaan aad u balaaran oo leh waxsoosaaro kala duwan, Tuulada Afurur waxaa ku nool dad aan tiro ahaan yaran, Waxaa ku yaala Saldhig weyn oo ciidamada Difaaca [[Puntland]] Leeyihiin. Waana goob Muhiim u ah difaaca guud ahaan woqooyi bari & Woqooyi galbeed ee [[Soomaaliya]].<ref>https://www.bbc.com/somali/war-44906751.amp</ref>
+'''Afurur''' Waa deegaan aad u balaaran oo leh wax soosaaro kala duwan, Tuulada Afurur waxaa ku nool dad aan tiro ahaan yaran, Waxaa ku yaala Saldhig weyn oo ciidamada Difaaca [[Puntland]] Leeyihiin. Waana goob Muhiim u ah difaaca guud ahaan woqooyi bari & Woqooyi galbeed ee [[Soomaaliya]]. Deegaanka iyo nawaaxigiisaba waxaa Degan Beesha [[Tiinle]].<ref>https://www.bbc.com/somali/war-44906751.amp</ref>
 
 ==Nolosha Deegaanka==
 Deegaanku wuxuu aad ugu baahan yahay In laga taageero dhanka Adeegyada bulshada Sida Caafimaadka Iyo waxbarashada. Degaanka Af Urur waxaa degan beesha [[Tiinle]] oo ka tirsan beelaha [[Mooracase]] ee [[Daarood]]ka.
