*Empty MediaWiki Message*

--- a/Dhagaxtuur.mw
+++ b/Dhagaxtuur.mw
@@ -22,5 +22,6 @@ Mudaaharaadyo balaaran ayaa ka dhacay caasimada muqdisho oo looga soo horjeeday 
 Waxeena shacabka ugu jawaabeen rasaas oo qiyaas ahaan 50 qof ku dhaawac matay, waxaana ku geeriyooday Maxamed Kheyre Rooble Dhagaxtuur oo horkacayay Dadkii la dagaalamayay Gumaytaha kana mid ahaa abaabulayashi Banaanbaxii dhagaxtuur, taas ayaana keentay in isaga loogu magacdaro halgaankaas qiimaha lahaa maadaama isagu uu ahaa qofkii kale ee halgankaas ku shahiiday. 
 
 Dhanka kake waxa askartii ingiriiska uga dhimatay 5 askari.<ref>Zak Yusuf</ref>
+
+W/Q Abdiaziiz mohamud Ciire
 [[Category:Taariikhda Soomaaliya]]
-<references group="W/Q Abdiaziiz mohamud" />
