W/Q: Abdiaziiz mohamud ciire

--- a/Dhagaxtuur.mw
+++ b/Dhagaxtuur.mw
@@ -23,7 +23,5 @@ Waxeena shacabka ugu jawaabeen rasaas oo qiyaas ahaan 50 qof ku dhaawac matay, w
 
 Dhanka kake waxa askartii ingiriiska uga dhimatay 5 askari.<ref>Zak Yusuf</ref>
 
-
-W/Q Abdiaziiz mohamud Ciire 
+W/Q: Abdiaziiz mohamud ciire 
 [[Category:Taariikhda Soomaaliya]]
-<br />
