--- a/Tisjiic.mw
+++ b/Tisjiic.mw
@@ -29,7 +29,7 @@
 |government_footnotes   =
 |government_type        =Magaalo
 |leader_title           =Duqa Magaalada
-|leader_name            = ###
+|leader_name            = 
 |established_title       = 
 |established_date       =1920
 |area_magnitude         =
@@ -57,4 +57,7 @@
 |website                =
 |footnotes              = 
 }}
-'''Tisjiic'''({{lang-en|''Tsijic''}}) ({{lang-ar| تيسجي'' واييي ''}}), Waa Magaalo ka tirsan gobolka [[Bari]] Waxay 90 Kiilomitir u jirtaa Magaalada [[Boosaaso]].<br />
+'''Tisjiic'''({{lang-en|''Tsijic''}}) ({{lang-ar| تيسجي'' واييي ''}}), Waa Magaalo ka tirsan gobolka [[Bari]] Waxay 90 Kiilomitir u jirtaa Magaalada [[Boosaaso]].Magaalada Tisjiic waxay ka tirsan tahay Degmada Boosaaso.<br />
+
+==Guudmar==
+Deegankan waxaa la asaasay 1920
