/* Hormuudka Beesha Hilibi murusade */

--- a/Hilibi_Maxamed.mw
+++ b/Hilibi_Maxamed.mw
@@ -89,7 +89,7 @@ Yaraanka Hilibi
 
 
 
-* Abdirisaq Wasiir Galmudug 
+* Abdirisaq Wasiirka Gaadiidka Cirka iyo Dhulka Galmudug 
 
 
 *11 Colonel Maxamed Xaaji Liire
@@ -110,19 +110,19 @@ Yaraanka Hilibi
 *14 Dr Axmed Nuur cabdiciid siyaad
 
 
-*15 Dr Liibaan Cali Siicoow
+*15 Dr Liibaan Cali Siicoow milkiilaha Isbitaalka Hello Doctor 
 
 
 *16 Drs ifraax Cabdullahi Sheikh maxamud
 
 
 *17 Dr Cali Baashi Sheikh Xuseen Gaafow
-
+Agaaasimaha isbitaalka UMAH HOSPITAL 
 
 *18 Dr Barrow
 
 
-*19 Dr idaris Maxamed Caddow
+*19 Dr idaris Maxamed Caddow madaxa MCH DEEGAANKA GUBTA 
 
 
 *20 Nabadoon C/risaaq Yuusuf Siicow Sheebal
@@ -176,7 +176,7 @@ Yaraanka Hilibi
 *34 Fanaanad Nasteexo Aadan Cabdi Nasteexo ladan
 
 
-*35 Gudoomiyaha Waaxda saqaawadiin ee Degmada Howlwadag G/Dhaxe Cali Siicoow Xasan 
+*35 Gudoomiyaha Waaxda saqaawadiin ee Degmada Howlwadag Cali Siicoow Xasan 
 
 
 *36 Gudoomiyaha waaxda Buuloxuubeey ee Degmada wadajir Tahliil maxamuud Guutaale
@@ -189,7 +189,7 @@ Maxamed Cabdullahi cismaan Qaarweere
 *38 Cornle maxamed Gaaboow Jimcaale
 
 
-*39 Gashanle Axmed Maxamud Jimcaale ( Axmed Xuurshow )
+*39 Dhame Axmed Maxamud Jimcaale ( Axmed Xuurshow )
 
 
 *40 General Ciise Indhooy
@@ -230,7 +230,7 @@ Barow
 *51 milkiilaha shirkada internet ka Dalsat Global Ganacsade Maxamed Axmed Xaaji Jaamac
 
 
-*52 Gudomiyaha Degmada Howlwadag Cabdikariin Cali kaar cabdi
+*52 Gudomiyaha Degmada Howlwadag Mustaf Cali Axmed Kheyre
 
 
 *53 Gudoomiyaha gudiga isbitaalka Dayniile Cumar Xuseen Aboor
@@ -264,7 +264,7 @@ Barow
 *62 macalin Nuur Cali Taqtar
 
 
-*63 Nabadoonka beesha murusade ee Gobolka Mudug Nabadoon Macalin Maxamud Shiikh Maxamed Kulane
+*63 Nabadoonka beesha murusade ee Gobolka Mudug Nabadoon Macalin Maxamud Shiikh Maxamed Kulan
 
 
 *64 Nabadoon Nuur Jalle wardheere (Nuur Shiine)
@@ -340,3 +340,9 @@ milkiilaha Liido Sea Food
 *87 Mohamed Musse Jimcale(Dhalinyarada ugu fir fircon)
 
 *88 Dr cabdi samad cabdi cali culusoow
+
+*89 Qunsulka Guud ee safaarada Tanzania Fardowso maxamed Qanyare Afrax 
+
+*90 xidigle Cabdi Maxamud Jilibeey Taliye sare oo ka tirsan ciidanka Kumaan dooska somaliyed ee Danab
+
+*91 milkiilaha Idaacada Wadnaha FM EX Gudomiye Cabdikariin Cali Kaar Cabdi
