--- a/Yaaqshiid.mw
+++ b/Yaaqshiid.mw
@@ -43,7 +43,7 @@
 | website             = [http://www.mogadishucity.net/dc-contacts/page/2/ Mareegta internetka]
 | footnotes           = E-mail dc.yaaqshiid@mogadishucity.net Facebook/degmadayaqshiidh.com
 }}
-'''Yaaqshiid''' waa [[degmo]] oo leeyahay ganacsadaha imran nur hirey waxayna katirsan gobolk [[Banaadir]] waxay ku taalaa waqooyi bari ee magaalada  [[Muqdisho]].
+'''Yaaqshiid''' waa [[degmo]]  waxayna katirsan gobolk [[Banaadir]] waxay ku taalaa waqooyi bari ee magaalada  [[Muqdisho]].waana dagmada koowaad ee ugu baaxada weyn gobalka banaadir 
 dagmadaan waxaa aas aasay nuur xiirey oo ah aabaha imran waxaana la aas aasay 1985
 
 Inkastoo ayna jirin tirakoob rasmi ah hadana dadka degan waxaa lagu qiyaasaa 97 kun oo qof.
