--- a/Tisjiic.mw
+++ b/Tisjiic.mw
@@ -19,12 +19,12 @@
 |pushpin_label_position =bottom
 |pushpin_mapsize        =
 |pushpin_map_caption    =
-|subdivision_type       =Country
+|subdivision_type       =Dalka
 |subdivision_name       ={{flag|Somalia}}<br>
 *{{flag|Puntland}}
-|subdivision_type1      =[[Administrative divisions of Somalia|Gobolka]]
+|subdivision_type1      =[[Gobolada Soomaaliya|Gobolka]]
 |subdivision_name1      =[[gobol|Bari]]
-|subdivision_type2      =[[Administrative divisions of Somalia|Magaalo]]
+|subdivision_type2      =[[Gobolada Soomaaliya|Magaalo]]
 |subdivision_name2      =[[Degmo| Boosaaso]]
 |government_footnotes   =
 |government_type        =Magaalo
@@ -57,7 +57,31 @@
 |website                =
 |footnotes              = 
 }}
-'''Tisjiic'''({{lang-en|''Tsijic''}}) ({{lang-ar| تيسجي'' واييي ''}}), Waa Magaalo ka tirsan gobolka [[Bari]] Waxay 90 Kiilomitir u jirtaa Magaalada [[Boosaaso]].Magaalada Tisjiic waxay ka tirsan tahay Degmada Boosaaso.<br />
+'''Tisjiic'''({{lang-en|''Tsijic''}}) ({{lang-ar| تيسجي'' واييي ''}}), Waa Tuulo ka tirsan gobolka [[Bari]] Waxay 90 Kiilomitir u jirtaa Magaalada [[Boosaaso]].
 
-==Guudmar==
+==Taariikh==
 Deegankan waxaa la asaasay 1920
+==juquraafiga==
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{{gumud}}
+{{Degmooyinka Gobolka Bari}}
