*Empty MediaWiki Message*

--- a/Hilibi_Maxamed.mw
+++ b/Hilibi_Maxamed.mw
@@ -1,3 +1,4 @@
+{{nadiifin|sababta=Maqaalkaan wuxuu u baahanyahay in la hagaajiyo}}
 Beesha Hilibi Maxamed ( Af-Ingiriis : Hilibi mohamed; Af-Carabi: هلبي محمد ) hilibi waxee ka mid yahiin beelaha somaliyed ee aad ka loogu yaqaano sharaf iyo geesinimo, 
 
 
