*Empty MediaWiki Message*

--- a/Taleex.mw
+++ b/Taleex.mw
@@ -7,7 +7,7 @@
 |nickname               = 
 |settlement_type        =Town
 |motto                  =
-|image_skyline          =Caasimad darwiish.png
+|image_skyline          =
 |imagesize              = 
 |image_caption          =[[Mohammed Abdullah Hassan]]'s fort in Taleeh.
 |image_flag             = 
@@ -17,12 +17,12 @@
 |image_map              = 
 |mapsize                = 
 |map_caption            = 
-|pushpin_map            =Somalia
+|pushpin_map            =Somaliland
 |pushpin_label_position =bottom
 |pushpin_mapsize        =
-|pushpin_map_caption    =Location in Somalia
+|pushpin_map_caption    =Location in Somaliland
 |subdivision_type       =Country
-|subdivision_name       ={{flag|Somalia}}
+|subdivision_name       ={{flag|Somaliland}}
 |subdivision_type1      =[[Administrative divisions of Somalia|Region]]
 |subdivision_name1      =[[Taleex, Somalia|Taleex]]
 |subdivision_type2      =[[Administrative divisions of Puntland|Taleex]]
@@ -59,7 +59,7 @@
 |blank_info             =
 |website                = 
 }}
-'''Taleex''' waa degmo ku taal gobolka [[Taleex|Sool]]  Ee Dawalada [[khaatumo]], oo ah maamul goboleed katirsan federaalka ee Somalia. Taleex waa magaalo Taarikhiya, waa hoygii halganka gumeysi diidka ee Soomaaliyeed, waana xarun taliskii  halganka Daraawiishtii ee uu hogaaminayey Mujaahid Sayid Maxamaed  Cabdule Xasan. 
+'''Taleex''' waa degmo ku taal gobolka [[Taleex|Sool]] ee jamhuuriyadda [[Somaliland]]. Taleex waa magaalo Taarikhiya, waa hoygii halganka gumeysi diidka ee Soomaaliyeed, waana xarun taliskii  halganka Daraawiishtii ee uu hogaaminayey Mujaahid Sayid Maxamaed  Cabdule Xasan. 
 
 ==Taariikhii==
 [[File:Calankii darawiish.png|thumb|Calankii Daraawiish]]
