--- a/Sool.mw
+++ b/Sool.mw
@@ -12,7 +12,7 @@
 |image_flag             = 
 |image_seal             = 
 |image_shield           = 
-|image_map              =Somaliland location map.svg
+|image_map              =Somaliland regions map Sool.png
 |mapsize                =250px
 |map_caption            =Waxay Somaliland kaga taal.
 |coordinates_display    =inline,title
@@ -46,6 +46,7 @@
 |footnotes              = 
 }}
 
+{{Gobolada Soomaaliland}}
 
 '''Sool''' waa gobol ku yaala bariga wadanka somalia, magaala madaxdeedina waa [[Las Anod|Laascaanood]]. Waxay xuduud laleedahay gobolada [[Togdheer]] [[Nugaal]] iyo [[Sanaag]] iyo waliba waxay xuduud la leedahay gobolka [[Bari (Gobol)|Bari]] ee dalka [[Soomaaliya]]. Sool waa gobol taariikh ahaan ka soo jeeda beelaha [[reer Darwiish]]. Wakhtiga gumeysiga waxay ahayd xarunta daraawiishta 
 
