--- a/Sool.mw
+++ b/Sool.mw
@@ -12,7 +12,7 @@
 |image_flag             = 
 |image_seal             = 
 |image_shield           = 
-|image_map              =Somaliland regions map Sool.png
+|image_map              =Somaliland location map.svg
 |mapsize                =250px
 |map_caption            =Waxay Somaliland kaga taal.
 |coordinates_display    =inline,title
@@ -46,9 +46,8 @@
 |footnotes              = 
 }}
 
-{{Gobolada Soomaaliland}}
 
-'''Sool''' waa gobol ku yaala bariga wadanka somalia, magaala madaxdeedina waa [[Las Anod|Laascaanood]]. Waxay xuduud laleedahay gobolada [[Togdheer]] [[Nugaal]] iyo [[Sanaag]] iyo waliba waxay xuduud la leedahay gobolka [[Bari (Gobol)|Bari]] ee dalka [[Soomaaliya]]. Sool waa gobol taariikh ahaan ka soo jeeda beelaha [[reer Darwiish]]. Wakhtiga gumeysiga waxay ahayd xarunta daraawiishta 
+'''Sool''' waa gobol ku yaala bariga wadanka somalia, magaala madaxdeedina waa [[Las Anod|Laascaanood]], iyo taariikh ahaan ahayd xarunta darawiish. Waxay xuduud laleedahay gobolada [[Togdheer]] [[Nugaal]] iyo [[Sanaag]] iyo waliba waxay xuduud la leedahay gobolka [[Bari (Gobol)|Bari]] ee dalka [[Soomaaliya]]. Sool waa gobol taariikh ahaan ka soo jeeda beelaha [[reer Darwiish]]. Wakhtiga gumeysiga waxay ahayd xarunta daraawiishta 
 
 Waa dhulkii daraawiishta iyo waxa ay waliba tahay deegaanada uu ka soo jeedo  [[Sayid Maxamed Cabdulle Xassan]]. Iyo ismacil mire cilmi. Gobolka Sool wuu kaga duwanyahay gobolada kale ee dalka, gobolkaan si buuxda ah looma soo gumeesaningobolka sool siiba degmada Taleex waa meeshii u horaysay ee Afrika diyaarad lagu soo weeraro waxaana ku soo weeraray gumaystihii Ingiriiska sanadkii 1920-kii. Taleex waxaa xoreeyey daraawiish.
 
