--- a/Template:Language_with_name.mw
+++ b/Template:Language_with_name.mw
@@ -1,4 +1,4 @@
 {{#ifeq:{{{links|}}}|no
  |{{{2}}}
- |[[{{{2}}}|{{{2}}}]]
+ |[[{{{2}}} Luqad|{{{2}}}]]
 }}&#58; {{Lang|{{{1}}}|{{{3}}}|rtl={{{rtl|}}}}}<noinclude>{{documentation}}</noinclude>
