*Empty MediaWiki Message*

--- a/Template:Lang-ar.mw
+++ b/Template:Lang-ar.mw
@@ -1,16 +1,2 @@
-{{#if: {{{1|<noinclude>—</noinclude>}}} 
-| {{#switch: {{{3|+}}}
-    | - = {{{4|carabi}}}{{LangF|ar|{{{3}}}}}
-    | + = [[Carabi|{{{4|Af Carabi}}}]]{{LangF|ar|{{{3}}}}}
-    | * =
-  }}<!--
--->{{lang|ar|{{{1}}}}}<!-- 
--->{{#if: {{{2|<noinclude>—</noinclude>}}}|{{LangTd|{{{2}}}}}}}
-| {{icon ara}}
-}}<!-- 
---><noinclude>{{Documentation}}</noinclude>
-<noinclude>
-
-[[Category:Lang-x templates|ar]]
-
-</noinclude>
+{{Language with name|ar|Af carabi|{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|ar]]</noinclude>
