--- a/Template:Lang-am.mw
+++ b/Template:Lang-am.mw
@@ -1,3 +1,2 @@
-{{Language with name|am|Amxaari|{{{1}}}|links={{{links|yes}}}}}<noinclude>
-
-{{Documentation|Template:Lang-x/doc}}
+{{Language with name|am|Af Amxaari |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|am]]</noinclude>
