*Empty MediaWiki Message*

--- a/Template:Lang-en.mw
+++ b/Template:Lang-en.mw
@@ -1,3 +1,2 @@
-{{Language with name|en|Af-Ingiriis|''{{{1}}}''}}<noinclude>
-
-{{Documentation|Template:Lang-x/doc}}
+{{Language with name|en|Af Ingiriis |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|en]]</noinclude>
