*Empty MediaWiki Message*

--- a/Template:Lang-sw.mw
+++ b/Template:Lang-sw.mw
@@ -1,3 +1,2 @@
-{{Language with name|sw|Af-Sawaaxili|{{{1}}}|links={{{links|yes}}}}}<noinclude>
-
-{{Documentation|Template:Lang-x/doc}}
+{{Language with name|sw|Af Sawaaxili |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|sw]]</noinclude>
