Noqay bedelaadka 202822 ee sameeyay  [[Special:Contributions/Samayngelinteyy|Samayngelinteyy]] ([[User talk:Samayngelinteyy|hadal]])

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -6,10 +6,9 @@
 |motto                  = 
 |settlement_type        ='''[[Mamul Goboleedl]]''' 
 |image_shield           = 
-|image_map              =Regioni federali Somali.png
+|image_map              =Jubaland maabkeeda ee Somalia.jpg
 |mapsize                = 
 |map_caption            =Jubaland
-|image_map2             =Jubaland maabkeeda ee Somalia.jpg
 |subdivision_type       =Wadanka
 |subdivision_name       ={{flag|Somalia}}
 |subdivision_type1      =
