--- a/Tisjiic.mw
+++ b/Tisjiic.mw
@@ -60,7 +60,8 @@
 '''Tisjiic'''({{lang-en|''Tsijic''}}) ({{lang-ar| تيسجي'' واييي ''}}), Waa Tuulo ka tirsan gobolka [[Bari]] Waxay 90 Kiilomitir u jirtaa Magaalada [[Boosaaso]].
 
 ==Taariikh==
-Deegankan waxaa la asaasay 1920
+Deegankan waxaa la asaasay 1920. Wuxuu horaantii wuxuu ahaa ceel ma'awi ah oo lagac cabo gu'u iyo jiilaalba. Sanadkii 1920 ayaa markii ugu horreysay la deegaameeyay. Tsijiic waa magaalo ballaaran hada. Waxayna ka kooban tahay labo qaybood.
+
 ==juquraafiga==
 
 
