--- a/Tisjiic.mw
+++ b/Tisjiic.mw
@@ -57,7 +57,7 @@
 |website                =
 |footnotes              = 
 }}
-'''Tisjiic'''({{lang-en|''Tsijic''}}) ({{lang-ar| تيسجي'' واييي ''}}), Waa Tuulo ka tirsan gobolka [[Bari]] Waxay 90 Kiilomitir u jirtaa Magaalada [[Boosaaso]].
+'''Tisjiic'''({{lang-en|''Tsijic''}}) ({{lang-ar| تيسجي'' واييي ''}}), Waa Tuulo ka tirsan gobolka [[Bari]] Waxay 90 Kiilomitir u jirtaa Magaalada [[Boosaaso]]. Waxay u jirtaa laamiga qiyaastii ilaa 40 Kilomitir. Magaalada Tisjiic waxay  ka kooban tahay labo qaybood oo la kala yiraahdo Tisjiic Sare iyo Tisjiic Hoose. Labada qaybdood ee Magaalada ayaa isu jira qiyaastii ilaa 3 kilomitir.
 
 ==Taariikh==
 Deegankan waxaa la asaasay 1920. Wuxuu horaantii wuxuu ahaa ceel ma'awi ah oo lagac cabo gu'u iyo jiilaalba. Sanadkii 1920 ayaa markii ugu horreysay la deegaameeyay. Tsijiic waa magaalo ballaaran hada. Waxayna ka kooban tahay labo qaybood.
