*Empty MediaWiki Message*

--- a/Tisjiic.mw
+++ b/Tisjiic.mw
@@ -59,6 +59,9 @@
 }}
 '''Tisjiic'''({{lang-en|''Tsijic''}}) ({{lang-ar| تيسجي'' واييي ''}}), Waa Tuulo ka tirsan gobolka [[Bari]] Waxay 90 Kiilomitir u jirtaa Magaalada [[Boosaaso]]. Waxay u jirtaa laamiga qiyaastii ilaa 40 Kilomitir. Magaalada Tisjiic waxay  ka kooban tahay labo qaybood oo la kala yiraahdo Tisjiic Sare iyo Tisjiic Hoose. Labada qaybdood ee Magaalada ayaa isu jira qiyaastii ilaa 3 kilomitir.
 
+==Waxbarasho==
+Tisjiic waxaa ku yaaala labo iskuul Hoose Dhexe iyo Dugsiyo Quraanka Kariimka ah lagu barto.  Sanadii 2019 ayaa Ardayda Fasalka 8-aad u fariisteen Imtixaanka Shahaadiga (Centerlize Exam) ee Wasaarada Waxbarashada [[Puntland]] qaado. Tisjiic waxay leedahay hanaan waxbarasho oo koroya arintaas oo ay udub-dhexaad u yihiin bulshada deegaanka ee waalidiinta iyo waxgaradku ugu horeeyaan.
+
 ==Taariikh==
 Deegankan waxaa la asaasay 1920. Wuxuu horaantii wuxuu ahaa ceel ma'awi ah oo lagac cabo gu'u iyo jiilaalba. Sanadkii 1920 ayaa markii ugu horreysay la deegaameeyay. Tsijiic waa magaalo ballaaran hada. Waxayna ka kooban tahay labo qaybood.
 
