--- a/Tisjiic.mw
+++ b/Tisjiic.mw
@@ -63,7 +63,7 @@
 Tisjiic waxaa ku yaaala labo iskuul Hoose Dhexe iyo Dugsiyo Quraanka Kariimka ah lagu barto.  Sanadii 2019 ayaa Ardayda Fasalka 8-aad u fariisteen Imtixaanka Shahaadiga (Centerlize Exam) ee Wasaarada Waxbarashada [[Puntland]] qaado. Tisjiic waxay leedahay hanaan waxbarasho oo koroya arintaas oo ay udub-dhexaad u yihiin bulshada deegaanka ee waalidiinta iyo waxgaradku ugu horeeyaan.
 
 ==Taariikh==
-Deegankan waxaa la asaasay 1920. Wuxuu horaantii wuxuu ahaa ceel ma'awi ah oo lagac cabo gu'u iyo jiilaalba. Sanadkii 1920 ayaa markii ugu horreysay la deegaameeyay. Tsijiic waa magaalo ballaaran hada. Waxayna ka kooban tahay labo qaybood.
+Deegankan waxaa la asaasay 1920. Wuxuu horaantii ahaa ceel ma'awi ah oo laga cabo gu'u iyo jiilaalba. Sanadkii 1920 ayaa markii ugu horeysay la deegaameeyay. Tisjiic waa magaalo ballaaran hada bulsho ahaana koreysa.
 
 ==juquraafiga==
 
