*Empty MediaWiki Message*

--- a/Tisjiic.mw
+++ b/Tisjiic.mw
@@ -1,7 +1,7 @@
 
 {{Infobox settlement
 |official_name          =Tisjiic/Tishiic
-|other_name             =Tisjic
+|other_name             =تيسجي
 |native_name            = 
 |nickname               = 
 |settlement_type        = [[Magaalo|Magaalo]]
@@ -57,7 +57,7 @@
 |website                =
 |footnotes              = 
 }}
-'''Tisjiic'''({{lang-en|''Tsijic''}}) ({{lang-ar| تيسجي'' واييي ''}}), Waa Tuulo ka tirsan gobolka [[Bari]] Waxay 90 Kiilomitir u jirtaa Magaalada [[Boosaaso]]. Waxay u jirtaa laamiga qiyaastii ilaa 40 Kilomitir. Magaalada Tisjiic waxay  ka kooban tahay labo qaybood oo la kala yiraahdo Tisjiic Sare iyo Tisjiic Hoose. Labada qaybdood ee Magaalada ayaa isu jira qiyaastii ilaa 3 kilomitir.
+'''Tisjiic'''({{lang-en|''Tisjiic''}}) ({{lang-ar| تيسجي''  ''}}), Waa Tuulo ka tirsan gobolka [[Bari]] Waxay 90 Kiilomitir u jirtaa Magaalada [[Boosaaso]]. Waxay u jirtaa laamiga qiyaastii ilaa 40 Kilomitir. Magaalada Tisjiic waxay  ka kooban tahay labo qaybood oo la kala yiraahdo Tisjiic Sare iyo Tisjiic Hoose. Labada qaybdood ee Magaalada ayaa isu jira qiyaastii ilaa 3 kilomitir.
 
 ==Waxbarasho==
 Tisjiic waxaa ku yaaala labo iskuul Hoose Dhexe iyo Dugsiyo Quraanka Kariimka ah lagu barto.  Sanadii 2019 ayaa Ardayda Fasalka 8-aad u fariisteen Imtixaanka Shahaadiga (Centerlize Exam) ee Wasaarada Waxbarashada [[Puntland]] qaado. Tisjiic waxay leedahay hanaan waxbarasho oo koroya arintaas oo ay udub-dhexaad u yihiin bulshada deegaanka ee waalidiinta iyo waxgaradku ugu horeeyaan.
