*Empty MediaWiki Message*

--- a/IORA.mw
+++ b/IORA.mw
@@ -5,7 +5,7 @@ Kala-guurka Badweynta Hindiya
 
 '''IORA'''
 
-[[Image:IORA logo.png|thumb|500px]]
+[[File: IORA logo.png|thumb|500px]]
 
 Kala-guurka Badweynta Hindiya Rim Ocean-Indian ah ee badda dhexdeeda gudaheeda gudaheeda, bari illaa galbeedka badweynta Hindiya guud ahaan, memebrska kale ee dibedda waxaa ka mid ah, jarmal, china, iyo USA.
 
