*Empty MediaWiki Message*

--- a/IORA.mw
+++ b/IORA.mw
@@ -5,7 +5,9 @@ Kala-guurka Badweynta Hindiya
 
 '''IORA'''
 
-[[File: IORA logo.png|thumb|500px]]
+[[File
+[[File:Https://lh3.googleusercontent.com/proxy/79gMh5ugpr9cKerwb I1sywZMYpW9OAnYdzFpX0FVj2Hx9mwb0EDlbIWOrN1G0MHBzdV7O6NXSPJaZk|thumb|right]]
+: IORA logo.png|thumb|500px]]
 
 Kala-guurka Badweynta Hindiya Rim Ocean-Indian ah ee badda dhexdeeda gudaheeda gudaheeda, bari illaa galbeedka badweynta Hindiya guud ahaan, memebrska kale ee dibedda waxaa ka mid ah, jarmal, china, iyo USA.
 
