*Empty MediaWiki Message*

--- a/IORA.mw
+++ b/IORA.mw
@@ -5,12 +5,31 @@ Kala-guurka Badweynta Hindiya
 
 '''IORA'''
 
-[[File
-[[File:Https://lh3.googleusercontent.com/proxy/79gMh5ugpr9cKerwb I1sywZMYpW9OAnYdzFpX0FVj2Hx9mwb0EDlbIWOrN1G0MHBzdV7O6NXSPJaZk|thumb|right]]
-: IORA logo.png|thumb|500px]]
+
 
 Kala-guurka Badweynta Hindiya Rim Ocean-Indian ah ee badda dhexdeeda gudaheeda gudaheeda, bari illaa galbeedka badweynta Hindiya guud ahaan, memebrska kale ee dibedda waxaa ka mid ah, jarmal, china, iyo USA.
 
+* {{flag|Australia}}
+* {{flag|Bangladesh}}
+* {{flag|Comoros}}
+* {{flag|India}}
+* {{flag|Indonesia}}
+* {{flag|Iran}}
+* {{flag|Kenya}}
+* {{flag|Madagascar}}
+* {{flag|Malaysia}}
+* {{flag|Maldives}}
+* {{flag|Mauritius}}
+* {{flag|Somalia}}
+* {{flag|Mozambique}}
+* {{flag|Oman}}
+* {{flag|Seychelles}}
+* {{flag|Singapore}}
+* {{flag|South Africa}}
+* {{flag|Sri Lanka}}
+* {{flag|Tanzania}}
+* {{flag|Thailand}}
+* {{flag|United Arab Emirates}}
 
 
 
