/* Sido kale fiiri */

--- a/IORA.mw
+++ b/IORA.mw
@@ -66,6 +66,6 @@ Kala-guurka Badweynta Hindiya Rim Ocean-Indian ah ee badda dhexdeeda gudaheeda g
 
 ==Sido kale fiiri==
 
-[[Somalia]]
-[[Badweynta Hindiya]]
-[[Somaliland]]
+*[[Somalia]]
+*[[Badweynta Hindiya]]
+*[[Somaliland]]
