--- a/Kacdoonka_masar.mw
+++ b/Kacdoonka_masar.mw
@@ -1,5 +1,5 @@
 {{Coord|30|2|40|N|31|14|8|E|region:BH_type:event|display=title}}
-[[File:Day of Anger marchers in street.jpg|thumb| kacaankii 25 janaayo]]
+[[File:Day of Anger marchers in street.jpg|thumb|500px| kacaankii 25 janaayo , waddanka Masar]]
 '''Kacdoonka masar''' ee 25 Janaayo ee xukunka lagaga tuuray madaxwaynihii hore ee wadanka [[masar]] [[Xusni Mubaarak]]
 
 [[Category:Kacaanka]]
