*Empty MediaWiki Message*

--- a/Wajaale.mw
+++ b/Wajaale.mw
@@ -62,7 +62,7 @@
 <!-- website, footnotes -------->
 }}
 
-
+[[File:Wajaale-Somaliland.jpg|thumb|right|500px]]
 
 {{Gumud}}
 {{Degmooyinka Gobolka Woqooyi Galbeed}}
