/* Feedback on movement names */ new section

--- a/Wikipedia:Safaarad.mw
+++ b/Wikipedia:Safaarad.mw
@@ -1203,3 +1203,18 @@ Deborah Schwartz Jacobs, Communities Liaison, On behalf of the Wikipedia Pages W
 
 ''feel free to translate this message to your local language when this helps your community''
 <!-- Message sent by User:Romaine@metawiki using the list at https://meta.wikimedia.org/w/index.php?title=User:Romaine/MassMessage&oldid=20232618 -->
+
+== Feedback on movement names ==
+
+{{int:Hello}}. Apologies if you are not reading this message in your native language. {{int:please-translate}} if necessary. {{Int:Feedback-thanks-title}}
+
+There are a lot of conversations happening about the future of our movement names. We hope that you are part of these discussions and that your community is represented.
+
+Since 16 June, the Foundation Brand Team has been running a [https://wikimedia.qualtrics.com/jfe/form/SV_9G2dN7P0T7gPqpD survey] in 7 languages about [[m:Special:MyLanguage/Communications/Wikimedia brands/2030 movement brand project/Naming convention proposals|3 naming options]]. There are also community members sharing concerns about renaming in a [[m:Special:MyLanguage/Community open letter on renaming|Community Open Letter]]. 
+
+Our goal in this call for feedback is to hear from across the community, so we encourage you to participate in the survey, the open letter, or both. The survey will go through 7 July in all timezones. Input from the survey and discussions will be analyzed and published on Meta-Wiki.
+
+Thanks for thinking about the future of the movement, --[[:m:Talk:Communications/Wikimedia brands/2030 movement brand project|The Brand Project team]], 19:42, 2 Luuliyo 2020 (UTC)
+
+''Note: The survey is conducted via a third-party service, which may subject it to additional terms. For more information on privacy and data-handling, see the [[foundation:Special:MyLanguage/Naming Convention Proposals Movement Feedback Survey Privacy Statement|survey privacy statement]].''
+<!-- Message sent by User:Elitre (WMF)@metawiki using the list at https://meta.wikimedia.org/w/index.php?title=User:Elitre_(WMF)/All_wikis_June_2020&oldid=20238830 -->
