--- a/Tisjiic.mw
+++ b/Tisjiic.mw
@@ -67,10 +67,8 @@ Deegankan waxaa la asaasay 1920. Wuxuu horaantii ahaa ceel ma'awi ah oo laga cab
 
 ==juquraafiga==
 
-
-
-
-
+==External Links==
+[https://www.mindat.org/feature-51240.html, Tisjiic]
 
 
 
