--- a/Tisjiic.mw
+++ b/Tisjiic.mw
@@ -68,7 +68,7 @@ Deegankan waxaa la asaasay 1920. Wuxuu horaantii ahaa ceel ma'awi ah oo laga cab
 ==juquraafiga==
 
 ==External Links==
-[https://www.mindat.org/feature-51240.html, Tisjiic]
+[https://www.mindat.org/feature-51240.html, Tisjiic, Gobolka Bari]
 
 
 
