--- a/Sabool.mw
+++ b/Sabool.mw
@@ -1,3 +1,6 @@
 '''Sabool''' ama '''Faqiir''' waa qof aan waxba heesanin.Dadka faqiirka ah ee caalamka ku nooli waa malaayiiin, meelkastana way ku noolyihiin.wadamada ugu faqiirsan caalamka waxee u badanyihiin Afrika iyo aasiya.Jamciyada quruumaha kadhaxaysaa waxa ay faqri ku tilmaamtaa dawlada aan sanadkii qofku helin lacag gaadhaysa 600 oo [[Dollar]].
 
+==Sidoo kale eeg==
+* [[Musuqmaasaq]]
+
 [[Category:Lacagta]]
