*Empty MediaWiki Message*

--- a/Dhagaxtuur.mw
+++ b/Dhagaxtuur.mw
@@ -1,17 +1,17 @@
 [[File:DHAGAXTUUR MONUMENT MOGADISHU SOMALIA.jpg|thumb|]]
 <nowiki>{{DHAGAXTUUR}}</nowiki>
 
-Magaca: Maxamed Kheyre Rooble <nowiki>{{Dhagaxtuur}}</nowiki> (1913 - 1949)
+Magaca: Maxamed Cali huud <nowiki>{{Dhagaxtuur}}</nowiki> (1913 - 1949)
 
 Jinsiyadda : Soomaali
 
-Qabiilka: Hawiye, Murusade, Hilibi maxamed.
+Qabiilka: Hawiye, Habargidir, sacad, farale.
 
 Ku dhashay: Hobyo 1915.
 
-Halagme DHAGAXTUUR magaciisu waa Maxamed Kheyre Rooble oo ku caan baxay magaca ah <nowiki>{{Dhagaxtuur}}</nowiki>.
+Halagme DHAGAXTUUR magaciisu waa Maxamed cali hurud. oo ku caan baxay magaca ah <nowiki>{{Dhagaxtuur}}</nowiki>.
 
-Qabilkiisa wuxuu ahaa Hawiye, Murusade, Hilibi maxamed, Cumar isxijiwaaq. Wuxuu 1915 ku dhashay magaalada Hobyo ee gobolka Mudug. wuxuu weerar ku qaaday isaga iyo dad shacab ah oo kasoo horjeeday gumeestihii Ingariis ka ee joogay guud ahaan dalka gaar ahaan kuwi joogay magaalada Muqdisho bishii Oktoobar 5 teeda 1949kii Rooble oo ah awoowgiis ahaana nin caan ka ah gayiga somaliyeed ee Mudug
+Qabilkiisa wuxuu ahaa Hawiye habar gidir sacad, farale. Wuxuu 1915 ku dhashay magaalada Hobyo ee gobolka Mudug. wuxuu weerar ku qaaday isaga iyo dad shacab ah oo kasoo horjeeday gumeestihii Ingariis ka ee joogay guud ahaan dalka gaar ahaan kuwi joogay magaalada Muqdisho bishii Oktoobar 5 teeda 1949kii Rooble oo ah awoowgiis ahaana nin caan ka ah gayiga somaliyeed ee Mudug
 
 Dhagax tuur  waxay ehayd dagaal ka dhacay magaalada Muqdisho bishii Oktoobar 5 teeda 1949kii. Dagaalkaas waxoo u dhaxeeyay ururkii xornimo doonka ahaa ee SYL iyo gumeestihii Ingiriiska oo markaas heestay dalka oo dhan.Aas aasihii SYL cabduqaadir sakhaawudiin ayaa gacan wayn ka gaystey siduu ugu dhaadhicin lahaa gumaysiga in Soomaalidu ay joogto waqtigii ay xur noqon lahayd.
 
