--- a/Bare.mw
+++ b/Bare.mw
@@ -12,7 +12,7 @@ Ereyga ''macalin'' ma ahan erey asal ahaan ka mid ah [[Soomaali|luuqada Soomaali
 Sida [[diin]]ta [[Islaam]]ku sheegtay macalimku waa [[waalid]]ka labaad ee ardeyga. Taas macnaheedu waa qadarin, sharaf iyo naxariis badan ayuu kugu leeyahay macalinka wax ku baraya.
 
 {{Gumud}}
-
+Baraha soomaaliyeed waa
 [[Category:Waxbarasho]]
 [[Category:Dad]]
 [[Category:Shaqo]]
