*Empty MediaWiki Message*

--- a/Buti.mw
+++ b/Buti.mw
@@ -1,7 +1,7 @@
-[[File:Ursus_arctos_-_Norway.jpg|thumb|500px|Butida cas ee ku nool wadanka Norway.]]
+[[File:Ursus_arctos_-_Norway.jpg|thumb|Butida cas ee ku nool wadanka Norway.]]
 [[File:Grosser_Panda.JPG|thumb|Butidu waa [[xayawaan]] ku nool [[dhul]]ka [[cimilo|cimilada]] qaboow leh.]]
 
-'''Buti''' ([[Af-Carabi]]: دب  waa [[xayawaan]] aad u wany oo [[duurjoog]] ah, taas oo ka mid ah xayawaanka [[naasley]]da ah.
+'''Buti''' ({{lang-en|Bear}}; {{lang-ar|دب}})  waa [[xayawaan]] aad u wany oo [[duurjoog]] ah, taas oo ka mid ah xayawaanka [[naasley]]da ah.
 Butidu waxay u eegtahay [[ey]]ga waana [[hilibcun]], [[ugaadhsi|ugaadhsata]] [[xoolo|xoolaha]], [[dad]]ka iyo [[kaluun]]ka. 
 
 Butidu waa [[xayawaan]] ku nool [[dhul]]ka [[cimilo|cimilada]] qaboow leh ee [[joog|jooga sareeya]] sida [[buur]]aha. Waxayna u badan tahay [[qaarad]]aha [[Koonfur Ameerika]], [[Waqooyiga Ameerika]], [[Yurub]], [[Aasiya]] iyo [[cidhif|labada cidhif]] ee [[dhul]]ka. 
