*Empty MediaWiki Message*

--- a/Valve_Corporation.mw
+++ b/Valve_Corporation.mw
@@ -1,3 +1,4 @@
+{{gumud}}
 [[File:Valve logo.svg|thumb]]
 '''Valve Corporation''', sidoo kale loo yaqaan '''Valve Software''' ama si fudud '''Valve''', waa soo saare ciyaarta fiidiyowga Mareykanka, daabacaadda, iyo shirkadda qaybinta dhijitaalka ah ee xarunteedu tahay Bellevue, Washington. Waa soosaaraha masraxa qaybinta software [[Steam]] iyo ''Half-Life'', ''Counter-Strike'', ''Portal'', ''Day of Defeat'', ''Team Fortress'', ''Left 4 Dead'', iyo ''Dota'' taxanaha.
 
