*Empty MediaWiki Message*

--- a/Jawle.mw
+++ b/Jawle.mw
@@ -1,3 +1,4 @@
+{{gumud}}
 Jowle waa tuulo kamid ah degmada xaradheere.
 Jowle waxaa daga beesha saruur oo kamid ah qabiilka habar gidir. 
 Jowle waxa ay ku tiirsan tahay 80%
