--- a/Gadabuursi.mw
+++ b/Gadabuursi.mw
@@ -1,6 +1,6 @@
 {{Farac|
 |group = Gadabuursi
-|image = 
+|image = [[File:The Tomb of Sheikh Samaroon.jpg|250px]]
 |poptime =
 |region1 = {{flagcountry|Ethiopia}}</br>{{flagcountry|Somaliland}}</br>{{flagcountry|Djibouti}}</br>
 |langs = [[Af-Soomaali]] iyo [[Carabi|af Carabi]]
