*Empty MediaWiki Message*

--- a/Gadabuursi.mw
+++ b/Gadabuursi.mw
@@ -1,3 +1,4 @@
+::''Bogga "[[Samaroon]]" halkan ayaa laga soo toosiyay''
 {{Farac|
 |group = Gadabuursi
 |image = [[File:The Tomb of Sheikh Samaroon.jpg|250px]]
