--- a/Gadabuursi.mw
+++ b/Gadabuursi.mw
@@ -55,6 +55,7 @@ Dhaqan ahaan, [[dad]]ka Gadabuursiga ahi waxay tan iyo [[wakhti]] hore ahaayeen 
 Si kastaba ha ahaatee, beesha Samaroon waxay tan iyo [[qarni]]yo badan ahaayeen [[dad]] aad u horumarsan oo leh [[ilbaxnimo]] ka sareeysan bulshooyinkii ay isku wakhtiga ahaayeen. Marka laga yimaado caado hoosaadka iyo dhaqanka xeerka ee caalamiga ka ahaa deegaanada beesha Gadabuursi, waxaa jirtey maamulo [[boqor]]tooyo, [[Suldaan|saldanad]] iyo dowlado kala dambeeyay oo beeshu soo yeelatay.<Ref>"maamulo [[boqor]]tooyo, [[Suldaan|saldanad]]"</ref> Kuwaasi waxaa ka mid ah [[Adal|Boqortooyadii Adal]], sidoo kale loo yaqaano [[Saldanadii Cadal]], taasi oo ka talineeysay deegaanada [[Soomaaliya|Waqooyiga Soomaaliya]], meelo ka mid ah dalka [[Itoobiya]], gebi ahaanba wadanka [[Jabuuti]] ilaa meelo ka mid ah dhulka maanta loo yaqaano [[Eratareya]].<Ref>"[[Itoobiya]], gebi ahaanba wadanka [[Jabuuti]] ilaa meelo ka mid ah dhulka maanta loo yaqaano [[Eratareya]]"</ref>
 
 ==Reeraha Beesha==
+{{Gadabuursi}}
 Marka la qeybinayo ama la kala dhigaayo beesha, reeraha beesha Gadabuursi waxaaa loo kala saaraa, guud ahaan, [[3|sadex waaxood]]<Ref>"beesha Gadabuursi waxaaa loo kala saaraa, guud ahaan, [[3|sadex waaxood]]"</ref> kuwaasi oo kala ah:
 
 :1. [[Beesha Habar Cafaan]]: beesha Habar Cafaan sidoo kale lagu naaneyso (HC) waa mid ka mid ah sadexda rukun ee beel-weynta Gadabuursi, waxayna ka kooban tahay [[12|labo iyo toban qabiil]] ama reerood.
@@ -62,56 +63,6 @@ Marka la qeybinayo ama la kala dhigaayo beesha, reeraha beesha Gadabuursi waxaaa
 :2. [[Makaahiil|Beesha Makaahiil]]: beesha Makaahiil waa ta ugu balaadhan uguna badan beelaha gudabursi waax ka mid ah sadexda rukun ee Samaroonka, waxayna guud ahaan u kala baxaan 15 qabiil ama reerood.
 
 :3. [[Beesha Maxamed Case]]: beesha Maxamed Case waa rukun ka mid ah sadexda tiir ee beel-weynta [[Samaroon]] kuwaasi oo deegaan ku ah dhulka iyo deegaanada xeebta [[Bada Cas]] ee gobolka [[Awdal]]. Beesha Maxamed Case waxaa loo kala saaraa [[11|kow iyo toban qabiil]] ama reerood.
-
-{{ sidebar
-| name         = Gadabuursi
-| pretitle     = Beelaha
-| title        = [[Samaroon|Gadabuursiga]]
-| titlestyle   = font-size: 150%
-| image        = [[File:Adal.PNG|160px]]
-| imagestyle   = padding-left:1em; padding-right:1em
-| headingstyle = background-color: #f4eea1; padding-top: 0
-| contentclass = hlist
-
-| heading1     = '''[[Beesha Habar Cafaan]]'''
-| content1     =
-* [[Xeebjire]] 
-* Muusafiin 
-* Dhagaweyne
-* Makayl 
-* Reer Xaamud
-* Hansasacad (xasan sacad)
-* Faroole
-* Jibraacin
-* Cali Ganuun
-* Reer Yuusuf
-* Reer Ciise
-* Gobe 
-* Reer Xaamud 
-
-| heading2     = '''[[Makaahiil|Beesha Makaahiil]]'''
-| content2     =
-* Ciye Makaahiil (Ciye)
-* Celi Makaahiil(Celi)
-* Cabdalle Makaahiil (Bahabar Cabdalle)
-* Xasan Makaahiil (Bahabar Xasan)
-* Jibriil Muuse (Afguduud)
-* Bahsanayo 
-* Makayl-Dheere
-* Cali Yoonis
-* Jibriil Yoonis
-* Aadan Yoonis 
-* Nuur Yoonis (Reer Nuur)
-
-| heading3     = '''[[Beesha Maxamed Case]]'''
-| content3     =
-* Reer Maxamed
-* Bahabar Celi
-* Bahabar Aadan
-* Bahabar Abokor
-* Bahabar Muuse
-* Abrayn 
-}}
 
 ==Juquraafiga Deegaanada==
 Guud ahaan Beesha Gadabuursi waxay degaan ku yihiin oo asal ahaan ka soo jeedaan; deegaanadan: 
