*Empty MediaWiki Message*

--- a/Dayniile.mw
+++ b/Dayniile.mw
@@ -82,7 +82,7 @@
 
 5 waaxda Kurdamac
 
-6 waaxda Garasbaaley .
+6 waaxda Daarusalaam .
 
 Dayniile waa degmo facweyn aadna u balaaran, waxa hoos tegi jiray intii aan xornimada la qaadan Degmooyinka Wardhiigley, Howlwadaag, Hodon, Buulo-Xuubey iyo qeybo Yaaqshiid ka mida ah.
 
