*Empty MediaWiki Message*

--- a/Dayniile.mw
+++ b/Dayniile.mw
@@ -70,7 +70,7 @@
 
 
 
-==Waxee ka kooban tahay 6 waaxood oo kala ah==
+==DEGMADA DAYNIILE OO DEGMO AHAAN LOO AQOON SADAY 1974 WAXEEY KA KOOBAN TAHAY 6  (LIX) WAAXOOD OO KALA AH==
 1 waaxda Ciise cabdi
 
 2 waaxda Barwaaqo
