*Empty MediaWiki Message*

--- a/Template:Lang-az.mw
+++ b/Template:Lang-az.mw
@@ -1,3 +1,2 @@
-{{Language with name|az|Azerbaijani|{{{1}}}|links={{{links|yes}}}}}<noinclude>
-
-{{Documentation|Template:Lang-x/doc}}
+{{Language with name|az|Af Aserbayjan |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|az]]</noinclude>
