*Empty MediaWiki Message*

--- a/Template:Lang-nl.mw
+++ b/Template:Lang-nl.mw
@@ -1,6 +1,2 @@
-{{Language with name|nl|Af-Holandees|''{{{1}}}''|links={{{links|yes}}}}}<noinclude>
-{{Documentation|Template:Lang-x/doc}}
-
-
-
-</noinclude>
+{{Language with name|nl|Af Holandees |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|nl]]</noinclude>
