/* Habka maamul gobolleedyada */

--- a/Somaliaaaa.mw
+++ b/Somaliaaaa.mw
@@ -311,8 +311,8 @@ Sidaa daraadeed [[Somaliland]] waxay gobolladii usii qaybisay: [[Awdal]], [[Cayn
 Waxaa sidaas oo kale [[Puntland]] samaysay Gobollo iyadoo kaga dayatay [[Somaliland]] Kuwaas oo kala ah: [[Bari]], [[Gardafuuy]], [[Haylan]], [[Karkaar]], [[Mudug]] iyo [[Nugaal]]. Ka sokoow in ay samaysay Puntland hadana waxay aqoonsantahay Dastuurka Soomaaliya kaasoo dhigaya Soomaaliya in ay tahay 18 Gobol kaasoo waxba kama jiraan ka dhigaya gobollada ay magacaawday.
 
 ===Habka maamul gobolleedyada===
-
-[[File:Un-somalia.png|thumb|700px|right|Maab la weyneyn karo]]
+[[File:Somali mg (federal).png|thumb|350px|Maamul goboleedyada Soomaaliyeed]]
+[[File:Un-somalia.png|thumb|200px|right|Maab la weyneyn karo]]
 
 Habka Federaalka ee lagu muransanyahay Soomaaliya wuxuu dalka u qaybiyay sidaan soo socota:
 
